<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsEventFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/component_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_event"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_title_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/color_window_text"
                android:textSize="@dimen/size_text_title"
                app:layout_constraintTop_toBottomOf="@+id/image_event"
                tools:layout_editor_absoluteX="16dp"
                tools:text="Title event" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/color_window_text"
                android:textSize="@dimen/size_text_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title_event"
                tools:text="Event description" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/color_window_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_price"
                style="@style/text_window_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/text_date"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:text="Preço R$ 6,33" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_date"
                style="@style/text_window_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_price"
                app:layout_constraintTop_toTopOf="@+id/text_price"
                tools:text="Dia 01/01/2001" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_localization_title"
                style="@style/text_window_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:paddingStart="10dp"
                android:paddingEnd="16dp"
                android:text="@string/details_fragment_text_title_localization"
                app:drawableStartCompat="@drawable/ic_location"
                app:drawableTint="@color/color_window_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_price" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/text_localization_title"
                app:layout_constraintStart_toEndOf="@+id/text_localization_title"
                app:layout_constraintTop_toTopOf="@+id/text_localization_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_localization"
                style="@style/text_window_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_localization_title"
                tools:text="Endereço: Rua Yemen, 15 - Yemen" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_checkin"
                android:layout_width="0dp"
                android:layout_height="47dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_button_gradient"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_localization">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/ic_checkin"
                    android:drawablePadding="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/details_event_fragment_text_button_check_in"
                    android:textAllCaps="true"
                    android:textColor="@color/color_button_text"
                    android:textSize="14sp"
                    app:drawableTint="@color/color_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/button_share"
                android:layout_width="0dp"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_button_gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_checkin"
                app:layout_constraintTop_toTopOf="@id/button_checkin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button_gradient"
                    android:drawableStart="@drawable/ic_share"
                    android:drawablePadding="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/details_event_fragment_text_button_share"
                    android:textAllCaps="true"
                    android:textColor="@color/color_button_text"
                    android:textSize="14sp"
                    app:drawableTint="@color/color_button_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>